--- a/studentportal/portalapp/templates/headercontent.html
+++ b/studentportal/portalapp/templates/headercontent.html
@@ -277,7 +277,7 @@ experience_saved="{{experience_saved}}"
  <section class="cover-image js-menu-shift"><div class="layer"><h1 class="h1">VNIT Student Portal</h1></div></section>
    -->      
 
-         {% elif pagename != "" %}
+         {% elif page_name != "" %}
          
          <section class="cover-image js-menu-shift"><div class="layer"><h1 class="h1">{{ page_name }} {% if exp_type != "" %} {{ exp_type }} {% endif %}</h1></div></section>
          
@@ -288,7 +288,6 @@ experience_saved="{{experience_saved}}"
 {% endif %}
 <!-- End of HEader section -->
 
-<br>
 
 <script>
     if(screen.width > 767){
