--- a/studentportal/clubsapp/static/CSS/singlePageTemplate.css
+++ b/studentportal/clubsapp/static/CSS/singlePageTemplate.css
@@ -39,29 +39,44 @@ body {
 	margin-right: 0px;
 	margin-bottom: 0px;
 	margin-left: 0px;
-	letter-spacing: 2px;
-	font-size: 70px;
-	padding-top:345px;
-	padding-bottom:266px;
-	background-color:rgba(8, 9, 19, 0.8);
+	padding-top:230px;
+	letter-spacing: 3px;
+	font-size: 80px;
+	font-weight:200;
+	height:100%;
+	background-color:rgba(13, 15, 23, 0.62);
 
 }
 .hero_name {
-	color: #000;
+	color: #bbbeee;
+	padding-top:20px;
+	padding-bottom:20px;
+	background-color:#181f4529;
 	text-align: center;
-	margin-top: 0px;
-	margin-right: 0px;
-	margin-bottom: 0px;
-	margin-left: 0px;
+	margin: 0px;
+	width:100%;
 	letter-spacing: 2px;
-	font-size: 60px;
-	margin-bottom:-3em;
-	padding-top:150px;
+	font-size:0px;
+	text-transform: uppercase;
+	top:50%;
+	left:50%;
+	transform:translate(-50%);
+	-o-transform:translate(-50%);
+	-webkit-transform:translate(-50%);
+	-moz-transform:translate(-50%);
+	position:absolute;
+
+}
+.hero_name h1{
+	font-size:100px;
+	font-weight:800;
+}
+.tagline {
+	text-align: center;
+	font-size: 18px;
 }
 /* Hero Section */
 .hero {
-
-	background-image: url(../IMG/mag_cover.jpg);
 
 	display:block;
 	width:100%;
@@ -69,26 +84,74 @@ body {
     background-position: center;
     background-repeat: no-repeat;
     background-size: cover;
-
-
+}
+.mag{
+	background-image: url(../IMG/mag.png);
+}
+.ecell{
+	background-image: url(../IMG/ecell.png);
+}
+.ieee{
+	background-image: url(../IMG/ieee.jpeg);
+}
+.prayaas{
+	background-image: url(../IMG/prayaas.jpeg);
+}
+.astro{
+	background-image: url(../IMG/astro.png);
 }
 
-.light {
-	font-weight: bolder;
-	color: rgb(18, 18, 18);
-	font-size: 70px;
+.ivlabs{
+	background-image: url(../IMG/ivlabs.png);
 }
-.tagline {
-	text-align: center;
-	color: #FFFFFF;
-	margin-top: -14em;
-	font-weight: lighter;
-	text-transform: uppercase;
-	letter-spacing: 1px;
-	font-size: 18px;
-	position:relative;
+.tesla{
+	background-image: url(../IMG/tesla.png);
+}
+.tvlocity{
+	background-image: url(../IMG/vlocity.png);
+}
+.grooves{
+	background-image: url(../IMG/grooves.png);
+}
+.irdscn{
+	background-image: url(../IMG/irr.png);
+}
+.iiche{
+	background-image: url(../IMG/ichhe.jpeg);
+}
+.hallabol{
+	background-image: url(../IMG/hallabol.png);
 }
 
+
+.scroll{
+	width:20%;
+	max-width:300px;
+	height:10%;
+	position:absolute;
+	left:50%;
+	top:90%;
+	transform: translateX(-50%);
+	-webkit-transform: translateX(-50%);
+	-o-transform: translateX(-50%);
+	-moz-transform: translateX(-50%);
+	margin-top:1px;
+	background-color:rgba(187, 190, 238, 0.53);
+	border-radius:60% 60% 0% 0%;
+	transition:1s;
+}
+.scroll:hover{
+	background-color:rgba(210, 159, 5, 0.52);
+}
+.scroll img{
+	position:absolute;
+	top:20%;
+	left: 50%;
+	transform: translateX(-50%);
+	-webkit-transform: translateX(-50%);
+	-o-transform: translateX(-50%);
+	-moz-transform: translateX(-50%);
+}
 /* About Section */
 
 .about {
@@ -99,6 +162,12 @@ body {
 	margin-top: 0px;
 	padding-bottom:40px;
 	font-size:15px;
+}
+@media (min-width: 720px) {
+	.about {
+		padding-right: 20%;
+		padding-left: 20%;
+	}
 }
 /* Stats Gallery */
 .heading2{
@@ -123,8 +192,11 @@ body {
 	background-size: cover;
 	background-repeat: no-repeat;
 }
+/* Parallax Section */
 
-/*contact*/
+
+/*contact-form*/
+
 #coninfo{
 	padding-left: 25px;
 	padding-right: 25px;
@@ -133,8 +205,16 @@ body {
 	background-color: #5c5d67;
 	margin-top: 0px;
 	padding-bottom:120px;
-	width:100%;
+	width:50%;
+	height:500px;
 }
+
+@media (max-width:600px) {
+	#coninfo {
+		width: 100%;
+	}
+}
+
 #coninfo h2{
 	text-align:center;
 	color:white;
@@ -177,9 +257,60 @@ body {
 }
 
 #message{
-	padding-bottom:150px;
+	padding-bottom:50px;
 	padding-top:10px;
 
+}
+
+/*contact-info*/
+
+#coninfo2{
+	padding-left: 25px;
+	padding-right: 25px;
+	padding-top: 35px;
+	display: inline-block;
+	background-color: #6e6e6e;
+	margin-top: 0px;
+	padding-bottom:120px;
+	width:50%;
+	float: right;
+	height:500px;
+}
+
+@media (max-width:600px) {
+	#coninfo2 {
+		width: 100%;
+	}
+}
+
+#coninfo2 h2{
+	text-align:center;
+	color:white;
+	font-size:50px;
+	padding-bottom:40px;
+	padding-top:35px;
+}
+#coninfo2 p{
+	text-align:center;
+	color:white;
+	font-size:20px;
+	padding-bottom:5px;
+	padding-top:5px;
+}
+#coninfo2 a{
+	text-align:left;
+	color:aliceblue;
+	font-size:20px;
+	padding-bottom:5px;
+	padding-top:5px;
+}
+#coninfo2 a:hover{
+	text-align:left;
+	color:#000060;
+	font-size:20px;
+	padding-bottom:5px;
+	padding-top:5px;
+	text-decoration:none;
 }
 
 .copyright {
@@ -312,7 +443,7 @@ body {
 .button {
 	max-width: 150px;
 	padding-top:20px;
-	margin-top: 40px;
+	margin-top: 10px;
 	padding-bottom: 35px;
 	text-align: center;
 	vertical-align: middle;
@@ -423,6 +554,7 @@ body {
 		text-align:center;
 	}
 
+
 }
 
 @media (max-width:767px){
@@ -434,6 +566,12 @@ body {
 		padding-top:25px;
 		padding-bottom:10px;
 		color:white
+	}
+	.scroll{
+		width:26%;
+	}
+	.hero_name h1{
+		font-size:60px;
 	}
 
 }
@@ -453,7 +591,7 @@ body {
 		border:3px solid rgb(24, 31, 69)
 	}
 	#message{
-		padding-bottom:150px;
+		padding-bottom:50px;
 		padding-top:10px;
 
 	}
