--- a/studentportal/clubsapp/templates/clubHome.html
+++ b/studentportal/clubsapp/templates/clubHome.html
@@ -28,12 +28,14 @@
       <link href="{% static 'CSS/singlePageTemplate.css' %}" rel="stylesheet" type="text/css">
       <link href="{% static 'CSS/homepage.css' %}" rel="stylesheet" type="text/css">
       <link href="{% static 'CSS/shar.css' %}" rel="stylesheet" type="text/css">
+      <link href="{% static 'CSS/posts.css' %}" rel="stylesheet" type="text/css">
       <link href="{% static 'CSS/work.css' %}" rel="stylesheet" type="text/css">
       <link href="{% static 'CSS/event.css' %}" rel="stylesheet" type="text/css">
 
       <!--The following script tag downloads a font from the Adobe Edge Web Fonts server for use within the web page. We recommend that you do not modify it.-->
       <script>var __adobewebfontsappname__="dreamweaver"</script>
       <link href="https://fonts.googleapis.com/css?family=Source+Sans+Pro" rel="stylesheet">
+      <link href="https://fonts.googleapis.com/css?family=Material+Icons" rel="stylesheet">
     </head>
 
     <body id="body">
@@ -45,9 +47,14 @@
 
 
                   <!-- Hero Section -->
-                  <section class="hero" id="hero">
-                    <h2 class="hero_header">{{ club_data.displayName }}</h2>
-                    <p class="tagline">{{ club_data.clubType }}</p>
+                  <section class="hero {{club_data.shortName}}" id="hero">
+                    <div class="hero_header">
+                      <div class="hero_name">
+                        <h1>{{club_data.displayName}}</h1><br>
+                        <div class="tagline">{{club_data.clubType}}<br>{{club_data.yearOfStart}}</div>
+                      </div>
+                    </div>
+
                   </section>
 
                   <!-- my -->
@@ -58,16 +65,43 @@
                   <!-- mentors -->
                   <section class="mentors">
                     <div class="mentors_column" id="mentors_column">
-                      <h3><b>ABCD EFGH</b></h3>
+                      <h3><b>Faculty Coordinator</b></h3>
                       <img src="https://www.w3schools.com/css/img_avatar.png" alt="" class="cards" id="mempic"/>
-                      <p>Faculty Coordinator</p>
+                      <p>{{club_data.facultyInCharge1}}</p>
                     </div>
                     <div class="mentors_column">
-                      <h3><b>HIJK LMNO</b></h3>
+                      <h3><b>Club President</b></h3>
                       <img src="https://www.w3schools.com/css/img_avatar.png" alt="" class="cards"  id="mempic"/>
-                      <p>Club President</p>
+                      <p>ABC EFGH</p>
                     </div>
                   </section>
+
+                 <!--NEW POST START-->
+                  <section class="container-fluid" id="Post">
+                    <h1>POSTS</h1>
+                    {% load activity_photo %}
+                    {% for post in activity_data%}
+
+                    <div class="col-lg-3 col-sm-6 col-xs-12"  id="divPost">
+                      <div class="" id="postHead"><h5>{{post.activity.date}}</h5></div>
+                      <div class="postDescription" onclick="show_overlay({{post.activity.id}})"><p>{{post.activity.description}}</p></div>
+                      <div id="divImage"><img src="{{post.activity.id|activityphoto}}" onerror="this.style.display='none'"/></div>
+                      <div id="overlay" class={{post.activity.id}}>
+                        <div class="over_post">
+                          <div id="overImage"><img src="{{post.activity.id|activityphoto}}" onerror="this.style.display='none'"/></div>
+                          <div class="post_right">
+                            <button id="over_post_button" onclick="hide_overlay()">X</button>
+                            <div class="" id="overHead"><h5>{{post.activity.date}}</h5></div>
+                            <div class="overDescription"><p>{{post.activity.description}}</p></div>
+                          </div>
+                        </div>
+                      </div>
+                    </div>
+                    {%endfor%}
+
+                  </section>
+                  <!--NEW POST END-->
+
 
                   <!-- Events -->
                   <section id="events" class="events">
@@ -78,27 +112,25 @@
                           <h1>Events</h1>
                           {% load date_parse %}
 
-                          {% for event in data%}
+                          {% for data in event_data%}
 
-                          <div class="event-block">
+                          <div class="{{forloop.counter|event_class}}" id="event-block">
                             <div class="event-fill">
                               <div class="event-left">
-                                <div class = "event-date-month">{{event.start_time|to_month}}</div>
-                                <div class = "event-date-num">{{event.start_time|to_day}}</div>
+                                <div class = "event-date-month">{{data.event.date|to_month}}</div>
+                                <div class = "event-date-num">{{data.event.date|to_day}}</div>
                               </div>
                               <div class="event-right">
                                 <div class="event-heading">
-                                  <h3 class ="event-hcontent">{{event.name}}</h3>
+                                  <h3 class ="event-hcontent">{{data.event.name}}</h3>
                                 </div>
                                 <div class="event-details">
-                                  <div class="event-details-time">{{event.start_time|to_time}}</div>
-                                  <div class="event-details-place">{{event.place.name}}</div>
+                                  <div class="event-details-time">{{data.event.time|to_time}}</div>
+                                  <div class="event-details-place">{{data.event.place}}</div>
                                 </div>
                               </div>
                             </div>
-                            <div class ="event-desp">
-                              {{event.description}}
-                            </div>
+                            <div class ="event-desp">{{data.event.description}}</div>
                           </div>
                           {% endfor %}
                         </div>
@@ -107,48 +139,16 @@
                   </section>
 
 
-                  <!-- Gallery --
+                  <!-- Gallery -->
                   <section id="gallery_club projectNavigation">
                     <h2 class="heading2">Gallery</h2>
 
                     <div class="grid">
-
+                      {%for data in gall_data%}
                       <div class="grid-item">
-                        <img src="https://s3-us-west-2.amazonaws.com/s.cdpn.io/82/orange-tree.jpg" />
-
+                        <img src="{{data.photo.photograph.url}}" onerror = "this.style.display='none'" />
                       </div>
-                      <div class="grid-item">
-                        <img src="https://s3-us-west-2.amazonaws.com/s.cdpn.io/82/submerged.jpg" />
-
-                      </div>
-                      <div class="grid-item">
-                        <img src="https://s3-us-west-2.amazonaws.com/s.cdpn.io/82/look-out.jpg" />
-
-                      </div>
-                      <div class="grid-item">
-                        <img src="https://s3-us-west-2.amazonaws.com/s.cdpn.io/82/one-world-trade.jpg" />
-
-                      </div>
-                      <div class="grid-item">
-                        <img src="https://s3-us-west-2.amazonaws.com/s.cdpn.io/82/drizzle.jpg" />
-
-                      </div>
-                      <div class="grid-item">
-                        <img src="https://s3-us-west-2.amazonaws.com/s.cdpn.io/82/cat-nose.jpg" />
-
-                      </div>
-                      <div class="grid-item">
-                        <img src="https://s3-us-west-2.amazonaws.com/s.cdpn.io/82/contrail.jpg" />
-
-                      </div>
-                      <div class="grid-item">
-                        <img src="https://s3-us-west-2.amazonaws.com/s.cdpn.io/82/golden-hour.jpg" />
-
-                      </div>
-                      <div class="grid-item">
-                        <img src="https://s3-us-west-2.amazonaws.com/s.cdpn.io/82/flight-formation.jpg" />
-
-                      </div>
+                      {%endfor%}
                     </div>
 
 
@@ -160,9 +160,7 @@
 
 
                   <!-- contact Section -->
-                  <div id="code">
-
-                    <section id="coninfo">
+                  <section id="coninfo">
                       <div>
                         <h2 class="heading2">Contact Us!!</h2>
                         <form class="myform" action="">
@@ -173,8 +171,20 @@
                         </form>
                       </div>
                     </section>
-                  </div>
 
+                    <section id="coninfo2">
+                      <div>
+                        <h2 class="heading2">Contact Info</h2>
+                        <div>
+                          <p><i class="material-icons">call</i>   {{club_data.contact.telephone1}}<br>{{club_data.contact.telephone2}}</p>
+                          <p><i class="material-icons">mail_outline</i>   {{club_data.contact.email}}</p>
+                          <p><i class="material-icons">language</i>   <a href="{{club_data.contact.website}}">{{club_data.contact.website}}</a></p>
+                        </div>
+                      </div>
+                    </section>
+                    <div class="pricing">
+                      <p>Stay tuned for more updates</p>
+                    </div>
 
 
 
