--- a/portalapp/templates/welcome_email.html
+++ b/portalapp/templates/welcome_email.html
@@ -4,6 +4,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <meta http-equiv="Content-Type" content="text/html; charset=UTF-8" />
     <title>Welcome to Student Portal, {{name}}!</title>
+
     <!-- 
     The style block is collapsed on page load to save you some scrolling.
     Postmark automatically inlines all CSS properties for maximum email client 
@@ -11,12 +12,12 @@
     -->
     <style type="text/css" rel="stylesheet" media="all">
     /* Base ------------------------------ */
-    
+
     *:not(br):not(tr):not(html) {
       font-family: Arial, 'Helvetica Neue', Helvetica, sans-serif;
       box-sizing: border-box;
     }
-    
+
     body {
       width: 100% !important;
       height: 100%;
@@ -26,7 +27,7 @@
       color: #74787E;
       -webkit-text-size-adjust: none;
     }
-    
+
     p,
     ul,
     ol,
@@ -34,16 +35,16 @@
       line-height: 1.4;
       text-align: left;
     }
-    
+
     a {
       color: #3869D4;
     }
-    
+
     a img {
       border: none;
     }
     /* Layout ------------------------------ */
-    
+
     .email-wrapper {
       width: 100%;
       margin: 0;
@@ -53,7 +54,7 @@
       -premailer-cellspacing: 0;
       background-color: #F2F4F6;
     }
-    
+
     .email-content {
       width: 100%;
       margin: 0;
@@ -63,16 +64,16 @@
       -premailer-cellspacing: 0;
     }
     /* Masthead ----------------------- */
-    
+
     .email-masthead {
       padding: 25px 0;
       text-align: center;
     }
-    
+
     .email-masthead_logo {
       width: 94px;
     }
-    
+
     .email-masthead_name {
       font-size: 16px;
       font-weight: bold;
@@ -81,7 +82,7 @@
       text-shadow: 0 1px 0 white;
     }
     /* Body ------------------------------ */
-    
+
     .email-body {
       width: 100%;
       margin: 0;
@@ -93,7 +94,7 @@
       border-bottom: 1px solid #EDEFF2;
       background-color: #FFFFFF;
     }
-    
+
     .email-body_inner {
       width: 570px;
       margin: 0 auto;
@@ -103,7 +104,7 @@
       -premailer-cellspacing: 0;
       background-color: #FFFFFF;
     }
-    
+
     .email-footer {
       width: 570px;
       margin: 0 auto;
@@ -113,11 +114,11 @@
       -premailer-cellspacing: 0;
       text-align: center;
     }
-    
+
     .email-footer p {
       color: #AEAEAE;
     }
-    
+
     .body-action {
       width: 100%;
       margin: 30px auto;
@@ -127,17 +128,17 @@
       -premailer-cellspacing: 0;
       text-align: center;
     }
-    
+
     .body-sub {
       margin-top: 25px;
       padding-top: 25px;
       border-top: 1px solid #EDEFF2;
     }
-    
+
     .content-cell {
       padding: 35px;
     }
-    
+
     .preheader {
       display: none !important;
       visibility: hidden;
@@ -150,21 +151,21 @@
       overflow: hidden;
     }
     /* Attribute list ------------------------------ */
-    
+
     .attributes {
       margin: 0 0 21px;
     }
-    
+
     .attributes_content {
       background-color: #EDEFF2;
       padding: 16px;
     }
-    
+
     .attributes_item {
       padding: 0;
     }
     /* Related Items ------------------------------ */
-    
+
     .related {
       width: 100%;
       margin: 0;
@@ -173,31 +174,31 @@
       -premailer-cellpadding: 0;
       -premailer-cellspacing: 0;
     }
-    
+
     .related_item {
       padding: 10px 0;
       color: #74787E;
       font-size: 15px;
       line-height: 18px;
     }
-    
+
     .related_item-title {
       display: block;
       margin: .5em 0 0;
     }
-    
+
     .related_item-thumb {
       display: block;
       padding-bottom: 10px;
     }
-    
+
     .related_heading {
       border-top: 1px solid #EDEFF2;
       text-align: center;
       padding: 25px 0 10px;
     }
     /* Discount Code ------------------------------ */
-    
+
     .discount {
       width: 100%;
       margin: 0;
@@ -208,33 +209,33 @@
       background-color: #EDEFF2;
       border: 2px dashed #9BA2AB;
     }
-    
+
     .discount_heading {
       text-align: center;
     }
-    
+
     .discount_body {
       text-align: center;
       font-size: 15px;
     }
     /* Social Icons ------------------------------ */
-    
+
     .social {
       width: auto;
     }
-    
+
     .social td {
       padding: 0;
       width: auto;
     }
-    
+
     .social_icon {
       height: 20px;
       margin: 0 8px 10px 8px;
       padding: 0;
     }
     /* Data table ------------------------------ */
-    
+
     .purchase {
       width: 100%;
       margin: 0;
@@ -243,7 +244,7 @@
       -premailer-cellpadding: 0;
       -premailer-cellspacing: 0;
     }
-    
+
     .purchase_content {
       width: 100%;
       margin: 0;
@@ -252,69 +253,69 @@
       -premailer-cellpadding: 0;
       -premailer-cellspacing: 0;
     }
-    
+
     .purchase_item {
       padding: 10px 0;
       color: #74787E;
       font-size: 15px;
       line-height: 18px;
     }
-    
+
     .purchase_heading {
       padding-bottom: 8px;
       border-bottom: 1px solid #EDEFF2;
     }
-    
+
     .purchase_heading p {
       margin: 0;
       color: #9BA2AB;
       font-size: 12px;
     }
-    
+
     .purchase_footer {
       padding-top: 15px;
       border-top: 1px solid #EDEFF2;
     }
-    
+
     .purchase_total {
       margin: 0;
       text-align: right;
       font-weight: bold;
       color: #2F3133;
     }
-    
+
     .purchase_total--label {
       padding: 0 15px 0 0;
     }
     /* Utilities ------------------------------ */
-    
+
     .align-right {
       text-align: right;
     }
-    
+
     .align-left {
       text-align: left;
     }
-    
+
     .align-center {
       text-align: center;
     }
     /*Media Queries ------------------------------ */
-    
+
     @media only screen and (max-width: 600px) {
       .email-body_inner,
       .email-footer {
         width: 100% !important;
       }
     }
-    
+
     @media only screen and (max-width: 500px) {
       .button {
         width: 100% !important;
       }
     }
     /* Buttons ------------------------------ */
-    
+
     .button {
       background-color: #3869D4;
       border-top: 10px solid #3869D4;
@@ -328,7 +329,7 @@
       box-shadow: 0 2px 3px rgba(0, 0, 0, 0.16);
       -webkit-text-size-adjust: none;
     }
-    
+
     .button--green {
       background-color: #22BC66;
       border-top: 10px solid #22BC66;
@@ -336,7 +337,7 @@
       border-bottom: 10px solid #22BC66;
       border-left: 18px solid #22BC66;
     }
-    
+
     .button--red {
       background-color: #FF6136;
       border-top: 10px solid #FF6136;
@@ -345,7 +346,7 @@
       border-left: 18px solid #FF6136;
     }
     /* Type ------------------------------ */
-    
+
     h1 {
       margin-top: 0;
       color: #2F3133;
@@ -353,7 +354,7 @@
       font-weight: bold;
       text-align: left;
     }
-    
+
     h2 {
       margin-top: 0;
       color: #2F3133;
@@ -361,7 +362,7 @@
       font-weight: bold;
       text-align: left;
     }
-    
+
     h3 {
       margin-top: 0;
       color: #2F3133;
@@ -369,7 +370,7 @@
       font-weight: bold;
       text-align: left;
     }
-    
+
     p {
       margin-top: 0;
       color: #74787E;
@@ -377,28 +378,31 @@
       line-height: 1.5em;
       text-align: left;
     }
-    
+
     p.sub {
       font-size: 12px;
     }
-    
+
     p.center {
       text-align: center;
     }
     </style>
   </head>
-  <body>
-    <span class="preheader">Thanks for trying out Student Portal. We’ve pulled together some information and resources to help you get started.</span>	
+  <body style="background:#F2F4F6; color:#233233;font-family: sans-serif ,'Helvetica Neue'; line-height: 1.4;margin: 0;width: 100% !important;height: 100%;">
+  <img src="https://i.imgur.com/yMzlqA3.png" alt ="VNIT" title="Vnit" style="display:block;margin-left: auto;margin-right:auto" width="600" height="220">
+
+{#    <span class="preheader">Thanks for trying out Student Portal. We’ve pulled together some information and resources to help you get started.</span>	#}
     <table class="email-wrapper" width="100%" cellpadding="0" cellspacing="0">
-      <tr>
+
+
+        <tr>
         <td align="center">
           <table class="email-content" width="100%" cellpadding="0" cellspacing="0">
             <tr>
-              <td class="email-masthead">
-                <a href="{{ link }}" class="email-masthead_name">
-       VNIT Student Portal
-      </a>
+              <td class="email-masthead" align="center">
+                  <a style="text-align: center;color:#233;font-size: 16px;text-decoration: none;" href="{{ link }}" class="email-masthead_name"><b>VNIT Student Portal</b></a>
               </td>
+
             </tr>
             <!-- Email Body -->
             <tr>
@@ -407,85 +411,45 @@
                   <!-- Body content -->
                   <tr>
                     <td class="content-cell">
-                      <h1>Welcome, {{name}}!</h1>
-                      <p>Thanks for trying  Student Portal. We’re thrilled to have you on board.</p>
-                      <p>We request you to kindly contribute your interview experiences on Student Portal website . </p>
-
-
-			<table class="body-action" align="center" width="100%" cellpadding="0" cellspacing="0">
+                        <h1>Hello {{name}}!</h1>
+                      <p style="color:#233;font-size: 12px;text-align: left">
+                      Thanks for trying Student Portal. We’re thrilled to have you on board.<br>
+                      We kindly request you to contribute your interview experiences on <a href="{{ link }}" style="color: #233233;text-decoration: underline;">Student Portal</a> website.<br>
+                      Your precious experience of any job/intern interview can be very beneficial for others.
+                      <br>For reference, here's your login information:</p>
+                      <table class="attributes" width="100%" cellpadding="0" cellspacing="0">
                         <tr>
-                          <td align="center">
-                            
-                            <table width="100%" border="0" cellspacing="0" cellpadding="0">
-                              <tr>
-                                <td align="center">
-                                  <table border="0" cellspacing="0" cellpadding="0">
-                                    <tr>
-                                      <td>
+                          <td class="attributes_content " style="background-color: #f2f4f6;padding: 8px;font-size: 12px;" >
+                            <table width="100%" cellpadding="0" cellspacing="0">
 
-                                        <a href="{{ link }}" class="button button--green" >Visit Student Portal</a>
-                                      </td>
-                                    </tr>
-                                  </table>
-                                </td>
+                              <tr>
+                                <td class="attributes_item">Username: {{username}}</td>
+                              </tr>
+                              <tr>
+                                <td class="attributes_item">Password: {{password}}</td>
                               </tr>
                             </table>
                           </td>
                         </tr>
                       </table>
+
 
                       <!-- Action -->
                       <table class="body-action" align="center" width="100%" cellpadding="0" cellspacing="0">
                         <tr>
-                          <td align="center">
-                            <!-- Border based button
-                       https://litmus.com/blog/a-guide-to-bulletproof-buttons-in-email-design 
-                            <table width="100%" border="0" cellspacing="0" cellpadding="0">
-                              <tr>
-                                <td align="center">
-                                  <table border="0" cellspacing="0" cellpadding="0">
-                                    <tr>
-                                      <td>
-                                        <a href="{{action_url}}" class="button button--" target="_blank">Do this Next</a>
-                                      </td>
-                                    </tr>
-                                  </table>
-                                </td>
-                              </tr>
-                            </table>
-                          </td>
-                        </tr>
-                      </table>-->
-                      <p>For reference, here's your login information:</p>
-                      <table class="attributes" width="100%" cellpadding="0" cellspacing="0">
-                        <tr>
-                          <td class="attributes_content">
-                            <table width="100%" cellpadding="0" cellspacing="0">
-                              
-                              <tr>
-                                <td class="attributes_item"><strong>Username:</strong> {{username}}</td>
-                              </tr>
-				 <tr>
-                                <td class="attributes_item"><strong>Password:</strong> {{password}}</td>
-                              </tr>
-                            </table>
-                          </td>
+                            <td align="center">
+                                <p style="color:#233;font-size: 12px;text-align: left" class="note">Since this is a auto-generated password, you can change it after you login to the website</p>
+                                <p style="color:#233;font-size: 12px;text-align: left">If you have any questions, feel free to contact us.</p>
+                                <p style="color:#233;font-size: 12px;text-align: left">Thanks,
+                                <br>Team Student Portal, VNIT</p>
+                            </td>
                         </tr>
                       </table>
-                   
-			<p>Since this is a system generated password,kindly change it on the <i>Edit_Profile</i> page under <i>Profile</i> section after you login to the website</p>
-                      <p>If you have any questions, feel free to email us.(We're lightning quick at replying.) </p>
-                      <p>Thanks,
-                        <br>VNIT Student Portal Team</p>
-                     
-                  
-
                     </td>
                   </tr>
                 </table>
               </td>
             </tr>
-           
           </table>
         </td>
       </tr>
