--- a/portalapp/templates/aboutus.html
+++ b/portalapp/templates/aboutus.html
@@ -11,7 +11,7 @@
 .aboutus_title{
 font-weight: bold;
  text-transform: uppercase;
-    font-family: "MontserratRegular","Helvetical";
+    font-family: 'Source Sans Pro', sans-serif;
     color: #2a3361;
 {#    margin: 0 0.8rem;#}
         font-size: medium; !important;
@@ -36,7 +36,7 @@ display: inline-block;
     line-height: 2.9rem;
     margin-top: 3px;
     font-size: large;
-    font-family: "MontserratRegular", "Helvetical";
+    font-family: 'Source Sans Pro', sans-serif;
     }
 
 @media only screen and (max-device-width: 480px)
@@ -54,7 +54,7 @@ border-radius: 50%;
     display: block;
     text-align: center;
     font-size: large;
-    font-family: "MontserratRegular", "Helvetical";
+    font-family: 'Source Sans Pro', sans-serif;
 }
     
   .aboutus_teamcontent{
@@ -62,7 +62,7 @@ border-radius: 50%;
     word-wrap: break-word;
     text-align: center;
     font-size: medium;
-    font-family: "MontserratRegular", "Helvetical";
+    font-family: 'Source Sans Pro', sans-serif;
 }
     
     
@@ -206,7 +206,7 @@ and the community where we spent our most of the time which is "A Club".</p>
 
     <div class="col-md-4 col-xs-12 " style="padding-bottom: 20px;">
         <img class="aboutus_teamimg" alt="Atharva Parwatkar pic" style="display: block;margin: 0 auto;" src="{% static 'IMAGES/atharva.jpg' %}"/><br>
-        <p class="aboutus_teamcontent_name"><b>Atharva Parwatkar<b></p>
+        <p class="aboutus_teamcontent_name"><b>Atharva Parwatkar</b></p>
         <p class="aboutus_teamcontent">atharva.parwatkar@gmail.com</p>
         <p class="aboutus_teamcontent"><span class="aboutus_teamcontent_field">VNIT CSE'19</span></p>
     </div>
