--- a/clubsapp/static/CSS/shar.css
+++ b/clubsapp/static/CSS/shar.css
@@ -2,10 +2,12 @@
     font-family: "MontserratRegular","Helvetical";
 }
 
-
+*{
+	font-family: 'Source Sans Pro', sans-serif;
+}
 
 nav {
-    font-family: "MontserratRegular","Helvetical";
+    font-family: 'Source Sans Pro', sans-serif;;
    background-color: #181F45 !important;
     /*opacity: 0.7;*/
    border-color: #181F45 !important;
@@ -72,7 +74,7 @@ nav {
     font-size: 20px;
 }
 .sp {
-    font-family: "MontserratRegular", "Helvetical";
+    font-family: 'Source Sans Pro', sans-serif;
 }
 .pagination{
         margin-left: 25%;
