--- a/portalapp/static/CSS/homepage.css
+++ b/portalapp/static/CSS/homepage.css
@@ -4,6 +4,10 @@
   content:"*";color:red;
 }
 
+*{
+    font-family: 'Source Sans Pro', sans-serif;
+}
+
 .experience-content .userdetails .setnumber{
 	border-radius: 50%;
     height: 70px;
@@ -45,7 +49,7 @@ height: 200px;
 	text-transform: uppercase;
 	padding-left: 5%;
 	font-weight: bold;
-    font-family:sans-serif;
+    font-family: 'Source Sans Pro', sans-serif;
 }
 
 
@@ -107,7 +111,7 @@ margin:2%;
     /*margin-left: 20rem;*/
     /*margin-top: -23px;*/
     font-size: 1.95rem;
-    font-family: Arial;
+    font-family: 'Source Sans Pro', sans-serif;
     max-height: 60%;
     overflow-y: auto;
 }
@@ -145,10 +149,10 @@ font-weight: bold;
 .experience-content .mid-content .rounddetails .border {
     border: 1px solid #d4d4d4;
     padding: 2%;
-	font-family: sans-serif;
+	font-family: 'Source Sans Pro', sans-serif;
 	margin:15px;
 }
-background-color:white;
+
 
 
 
@@ -186,43 +190,50 @@ background-color:white;
 	box-shadow: 0 3px 5px rgba(0,0,0,0.16),0 3px 5px rgba(0,0,0,0.23)
 }
 
-.editprofile_user{
-	margin-top : 10%;
-	margin-left: 10%;	
-	background-color: white;
-    /*border: 1px solid blue ;*/
-    height: 130px;
-    width: 80%;
-    box-shadow: 5px 5px #afc2d4;
+
+.editprofile{
+    width:100%!important;
 }
+.editprofile_user{margin-left:0px !important; margin-right:5px !important;background-color: white;width: 100%;text-align:center;padding: 20px 0%;border-radius: 5px;border: 0px solid;margin-top:20px;}
 .editprofile_user i {
 color: grey;
-font-size: 100px;	
-margin:15%;
+font-size: 15px;
+position:inherit;
 
 }
 
-.editprofile_user .basic_details{
-	margin: 5%;
-	text-transform: uppercase;
-	padding-left: 40%;
-	padding-top: 5%;
-	font-weight: bold;
+.editprofile_form{
+	margin:20px 0px;
+	padding:20px !important;
+    border-radius: 5px;
+    border: 0px solid;
 }
-.editprofile_user .basic_details i{
-font-size: 20px;
-color: black;
-margin:2%;
+@media (min-width: 600px) {
+    .editprofile_form{
+        margin:20px 0px;
+        padding:30px 50px !important;
+
+    }
 }
 
 .editprofile_button{
-	margin-left	: 10%;
+	margin-left	: 20%;
+	padding:10px;
 	margin-top: 5%;
-	width:80%;
+	width:60%;
+
+	color:#192044;
+	text-transform: uppercase;
+	background-color: #fff;
+	border:2px solid #192044;
+}
+
+.editprofile_button:hover{
 	color:white;
 	text-transform: uppercase;
 	background-color: #181F45;
 }
+
 
 .edit_options ul{
 list-style: none;
@@ -233,7 +244,7 @@ margin: 0;
 /* ENd of edit profile page */
 
 
-	
+
 body{
 background-color: #EFEFEF ;
  max-width: 100%;
@@ -266,14 +277,14 @@ background-color: #EFEFEF ;
     margin-top: 4%;
     #padding: 0.3rem 1rem;
     color: #efefef;
-    
+
     background-color: rgba(255,255,255,0.4);
     font-size: 1.4rem;
     width: auto;
     text-transform: uppercase;
-    font-family: "MontserratRegular","Helvetical";
+    font-family: 'Source Sans Pro', sans-serif;
     transition: all 0.8s ease;
-    
+
     margin:8px;
     padding:5px;
     padding-left: 10px;
@@ -289,7 +300,7 @@ input.search-company::-webkit-input-placeholder {
 
 .main-menu a {
     text-transform: uppercase;
-    font-family: "MontserratRegular","Helvetical";
+    font-family: 'Source Sans Pro', sans-serif;
     color: inherit;
     font-size: 1.4rem !important;
     padding: 0;
@@ -304,7 +315,7 @@ input.search-company::-webkit-input-placeholder {
 
 .dropbtn,button	{
     text-transform: uppercase;
-    font-family: "MontserratRegular","Helvetical";
+    font-family: 'Source Sans Pro', sans-serif;
     color: white;
     margin: 0 0.8rem;
     font-size: 1.4rem !important;
@@ -336,12 +347,12 @@ input.search-company::-webkit-input-placeholder {
     line-height: 1.2rem;
     color: #FFC107;
  }
- 
+
  /* This is to remove the underline of anchor tags in main menu */
  .main-menu a,button{
  text-decoration: none !important;
  }
- 
+
  /* The user menu on click of user */
  .main-menu .user-menu {
     display: none;
@@ -350,7 +361,7 @@ input.search-company::-webkit-input-placeholder {
     right: 0rem;
     color: #000;
     text-transform: uppercase;
-    font-family: "MontserratRegular","Helvetical";
+    font-family: 'Source Sans Pro', sans-serif;
     top: 5rem;
 }
 
@@ -363,7 +374,7 @@ input.search-company::-webkit-input-placeholder {
     border-right: 0.7rem solid transparent;
     border-bottom: 0.7rem solid #f2f2f2;
 }
- 
+
  .main-menu .user-menu a:hover {
     background-color: #d4d4d4;
 }
@@ -392,23 +403,19 @@ input.search-company::-webkit-input-placeholder {
     -moz-osx-font-smoothing: grayscale;
 }
  /* End of usermennu */
- 
- 
- 
- .cover-image {
-    height: 15rem;
-}
+
+
 .cover-image {
-    box-shadow: 0 2px 2px 0 rgba(0,0,0,0.14),0 3px 1px -2px rgba(0,0,0,0.2),0 1px 5px 0 rgba(0,0,0,0.12);
-    background-color: #2a3361 /*#181F45*/;
-}
-.cover-image {
-    height: 13rem;
-    width: 100%;
-    margin: 0;
+    height: 8rem;
+    width: 96%;
+    margin-top: 20px;
+    margin-left:2%;
+    margin-right:auto;
+    border-radius:4px;
     padding: 0;
     display: table;
     position: relative;
+    background-color: #2b3660 /*#181F45*/;
 }
 
  .container-fluid>.navbar-header{
@@ -417,10 +424,10 @@ background-color: rgb(24, 31, 69);
 .cover-image .h1 {
     margin: 0;
     text-transform: uppercase;
-    font-family: "MontserratRegular","Helvetical";
+    font-family: 'Source Sans Pro', sans-serif;
     font-size: 3rem;
-    margin-top: 4rem;
-    line-height: 3rem;
+    margin-top: 3rem;
+    line-height: 2rem;
     vertical-align: middle;
     font-weight: normal;
 }
@@ -428,11 +435,11 @@ background-color: rgb(24, 31, 69);
 .cover-image .layer {
     color: #fff;
     text-align: center;
-    padding: 0 0.5rem;
+    padding: 0 0rem;
     height: inherit;
     top: 0;
     position: absolute;
-    width: calc(100% - 1rem);
+    width: calc(100%);
 }
 .layer {
     padding: 2.5rem;
@@ -619,7 +626,7 @@ color:#FFC107 !important;
 
 #name
 {
-	font-family:Tahoma;
+	font-family: 'Source Sans Pro', sans-serif;
 	color:black;
 margin-top:5%;
 	margin-left:0%;
@@ -627,7 +634,7 @@ margin-top:5%;
 
 #sub_head 
 {
-	font-family:Tahoma;
+	font-family: 'Source Sans Pro', sans-serif;
 	color:black;
 	margin-top:-2%;
 	margin-left:37.5%;
@@ -650,7 +657,7 @@ margin-top:5%;
 }
 #nav1 button{
 	 text-transform: uppercase;
-    font-family: "MontserratRegular","Helvetical";
+    font-family: 'Source Sans Pro', sans-serif;
     color: inherit;
     margin: 0 0.8rem;
     font-size: 1.4rem !important;
@@ -985,7 +992,7 @@ color:#213a73;
     padding-top: 7rem;
     display: table;
     text-align: center;
-    font-family: "ClearSansLight","Helvetical";
+    font-family: 'Source Sans Pro', sans-serif;
     
 }
 @media screen and (max-width: 732px){
@@ -994,4 +1001,47 @@ color:#213a73;
     }
 #footer_links{
 display: none;}
+}
+
+
+
+.form-control {
+    display: block;
+    width: 100%;
+    height: 50px;
+    padding: 8px 15px;
+    font-size: 15px;
+    line-height: 1.42857143;
+    color: #555;
+    background-color: #fff;
+    background-image: none;
+    border:0px solid #ccc;
+    border-bottom:3px solid #ccc;
+
+    border-radius: 0px;
+    -webkit-box-shadow: inset 0 0px 0px rgba(0,0,0,.075);
+    box-shadow: inset 0 0px 0px rgba(0,0,0,.075);
+    -webkit-transition: border-color ease-in-out .15s,-webkit-box-shadow ease-in-out .15s;
+    -o-transition: border-color ease-in-out .15s,box-shadow ease-in-out .15s;
+    transition: border-color ease-in-out .15s,box-shadow ease-in-out .15s;
+}
+.form-control:hover{
+	border-bottom:3px solid #2c3660;
+}
+.form-control:focus{
+	border:0px solid #ccc;
+	border-bottom:6px solid #2c3660;
+	outline:none !important;
+}
+input:focus{
+	outline:none !important;
+	box-shadow:none !important;
+}
+
+.col-margin{
+    margin-bottom: 10px;
+}
+.editprofile_button{
+    display:flex;
+    justify-content: center;
 }
