--- a/portalapp/templates/headercontent.html
+++ b/portalapp/templates/headercontent.html
@@ -274,7 +274,7 @@ experience_saved="{{experience_saved}}"
   <div class="col-md-2 margin-top"></div>
    </div>
 </div>
-    <p class="container sp" style="font-size: 40px; text-align: center; color: black; background-color: white; width:100%; font-family:'Arial' !important; border-bottom:5px solid #dad3d36e;">Student Portal</p>
+    <p class="container sp" style="font-size: 40px; text-align: center; color: black; background-color: white; width:100%; font-family: 'Source Sans Pro', sans-serif!important; border-bottom:5px solid #dad3d36e;">Student Portal</p>
 <!--
  <section class="cover-image js-menu-shift"><div class="layer"><h1 class="h1">VNIT Student Portal</h1></div></section>
    -->      
