--- a/portalapp/templates/password_reset_email.html
+++ b/portalapp/templates/password_reset_email.html
@@ -389,15 +389,14 @@
   </head>
   <body>
     <span class="preheader">Use this link to reset your password. </span>
+    <img src="https://i.imgur.com/yMzlqA3.png" alt ="VNIT" title="Vnit" style="display:block;margin-left: auto;margin-right:auto" width="600" height="220">
     <table class="email-wrapper" width="100%" cellpadding="0" cellspacing="0">
       <tr>
         <td align="center">
           <table class="email-content" width="100%" cellpadding="0" cellspacing="0">
             <tr>
               <td class="email-masthead">
-                <a href="10.18.0.129:8080/home" class="email-masthead_name">
-        VNIT Student Portal
-      </a>
+                <a href="10.18.0.129:8080/home" class="email-masthead_name" style="color:#233;font-size: 18px;text-align: center" >VNIT Student Portal</a>
               </td>
             </tr>
             <!-- Email Body -->
@@ -408,7 +407,7 @@
                   <tr>
                     <td class="content-cell">
                       <h1>Hi {{name}},</h1>
-                      <p>You recently requested to reset your password for your Student Portal account. Use the button below to reset it. <!--<strong>This password reset is only valid for the next 24 hours.</strong>--></p>
+                      <p style="color:#233;font-size: 12px;text-align: left" >You recently requested to reset your password for your Student Portal account. Use the button below to reset it. <!--<strong>This password reset is only valid for the next 24 hours.</strong>--></p>
                       <!-- Action -->
                       <table class="body-action" align="center" width="100%" cellpadding="0" cellspacing="0">
                         <tr>
@@ -422,7 +421,7 @@
                                     <tr>
                                       <td>
 
-                                        <a href="{{ link }}" class="button button--green" >Reset your password</a>
+                                        <a  style="color: #233233;text-decoration: underline;" href="{{ link }}" >Reset your password</a>
                                       </td>
                                     </tr>
                                   </table>
@@ -432,15 +431,15 @@
                           </td>
                         </tr>
                       </table>
-                      <p><!--For security, this request was received from a {{operating_system}} device using {{browser_name}}.--> If you did not request a password reset, please ignore this email or contact us on the same email if you have questions.</p>
-                      <p>Thanks,
+                      <p style="color:#233;font-size: 12px;text-align: left" ><!--For security, this request was received from a {{operating_system}} device using {{browser_name}}.--> If you did not request a password reset, please ignore this email or contact us on the same email if you have questions.</p>
+                      <p style="color:#233;font-size: 12px;text-align: left" >Thanks,
                         <br>VNIT Student Portal Team</p>
                       <!-- Sub copy -->
                       <table class="body-sub">
                         <tr>
                           <td>
-                            <p class="sub">If you’re having trouble with the button above, copy and paste the URL below into your web browser.</p>
-                            <p class="sub">{{link}}</p>
+                            <p style="color:#233;font-size: 12px;text-align: left"  class="sub">If you’re having trouble with the button above, copy and paste the URL below into your web browser.</p>
+                            <p  style="color:#233;font-size: 12px;text-align: left" class="sub">{{link}}</p>
                           </td>
                         </tr>
                       </table>
