--- a/portalapp/static/CSS/homepage.css
+++ b/portalapp/static/CSS/homepage.css
@@ -192,7 +192,7 @@ font-weight: bold;
 
 
 .editprofile{
-    width:100%!important;
+    width: 100%!important;
 }
 .editprofile_user{margin-left:0px !important; margin-right:5px !important;background-color: white;width: 100%;text-align:center;padding: 20px 0%;border-radius: 5px;border: 0px solid;margin-top:20px;}
 .editprofile_user i {
@@ -208,13 +208,7 @@ position:inherit;
     border-radius: 5px;
     border: 0px solid;
 }
-@media (min-width: 600px) {
-    .editprofile_form{
-        margin:20px 0px;
-        padding:30px 50px !important;
 
-    }
-}
 
 .editprofile_button{
 	margin-left	: 20%;
@@ -233,6 +227,53 @@ position:inherit;
 	text-transform: uppercase;
 	background-color: #181F45;
 }
+
+.editpass_button{
+	background-color:#ed143d00 !important;
+	font-color:#2b3660 !important;
+	text-decoration:underline;
+	font-size:16px;
+	font-weight:bolder;
+	margin-top:10px;
+	text-align:center;
+
+}
+
+.btn-ex{
+    color:#192044;
+	text-transform: uppercase;
+	background-color: #fff;
+	border:2px solid #192044;
+}
+
+.btn-ex:hover{
+	color:white;
+	text-transform: uppercase;
+	background-color: #181F45;
+}
+
+@media (min-width: 600px) {
+    .editprofile{
+    width: 80%!important;
+}
+    .editprofile_form{
+        margin:20px 0px;
+        padding:30px 50px !important;
+
+    }
+    .editprofile_button{
+	margin-left	: 30%;
+	padding:10px;
+	margin-top: 5%;
+	width:40%;
+
+	color:#192044;
+	text-transform: uppercase;
+	background-color: #fff;
+	border:2px solid #192044;
+}
+}
+
 
 
 .edit_options ul{
@@ -942,35 +983,39 @@ z-index: 0 !important ;
 
 
 .contribute_form {
-    padding: 2%; 
-    
-    margin: 4%;
-
+    padding: 20px;
     margin-top: 0px;
+    margin-left:20px;
+    margin-right:20px;
+    margin-bottom:40px;
     background-color: white;
     height: auto;
     min-height: 200px;
-
-    box-shadow: 0 3px 5px rgba(0,0,0,0.16),0 3px 5px rgba(0,0,0,0.23);
+    border-radius:4px;
+}
+@media(min-width:600px){
+	.contribute_form{
+		padding:40px;
+	}
 }
 
-      
+
 .profile_content .btn {
-color:#213a73; 
+color:#213a73;
 	opacity:0.5;
-        background-color:#8ec3d8; 
+        background-color:#8ec3d8;
  }
 
 
-       
+
 input .profile_content .btn {
-color:#213a73; 
+color:#213a73;
 	opacity:0.5;
-        background-color:#8ec3d8; 
+        background-color:#8ec3d8;
         height: 45px !important;
  }
- 
-  
+
+
 .accept_company_request_box{
 	padding: 2%;
 	padding-left: 30px;
@@ -993,7 +1038,7 @@ color:#213a73;
     display: table;
     text-align: center;
     font-family: 'Source Sans Pro', sans-serif;
-    
+
 }
 @media screen and (max-width: 732px){
     #login_content{
@@ -1010,14 +1055,13 @@ display: none;}
     width: 100%;
     height: 50px;
     padding: 8px 15px;
-    font-size: 15px;
+    font-size: 12px;
     line-height: 1.42857143;
-    color: #555;
+    color: #000;
     background-color: #fff;
     background-image: none;
     border:0px solid #ccc;
     border-bottom:3px solid #ccc;
-
     border-radius: 0px;
     -webkit-box-shadow: inset 0 0px 0px rgba(0,0,0,.075);
     box-shadow: inset 0 0px 0px rgba(0,0,0,.075);
@@ -1027,13 +1071,46 @@ display: none;}
 }
 .form-control:hover{
 	border-bottom:3px solid #2c3660;
+	color:#2c3660;
 }
 .form-control:focus{
-	border:0px solid #ccc;
+	border:0px solid #efefef;
 	border-bottom:6px solid #2c3660;
 	outline:none !important;
 }
+
+::-webkit-input-placeholder { /* Chrome */
+
+  color:black !important;
+}
+:-ms-input-placeholder { /* IE 10+ */
+  color:black !important;
+}
+::-moz-placeholder { /* Firefox 19+ */
+  color:black !important;
+  opacity: 1;
+}
+:-moz-placeholder { /* Firefox 4 - 18 */
+  color:black !important;
+  opacity: 1;
+}
 input:focus{
+	outline:none !important;
+	box-shadow:none !important;
+}
+select:not([multiple]){
+	-webkit-appearance:inherit;
+	-moz-appearance:none;
+}
+label{
+	margin-top:10px;
+	margin-bottom:-10px;
+	color:#2c3660;
+	font-size:18px;
+	font-weight:bolder;
+}
+
+select:focus,textarea:focus{
 	outline:none !important;
 	box-shadow:none !important;
 }
