--- a/portalapp/templates/experienceform.html
+++ b/portalapp/templates/experienceform.html
@@ -269,7 +269,7 @@ function load()
 
 <div class="row">
 
-	 <div class="col-md-3">
+	 <div class="col-md-6 col-sm-6 col-xs-12">
         <label class="control-label" for="company">Choose company <span style="color: #d00;">*</span> :</label>
     		<select class="form-control" onchange="changeFunc();" name="company" id="company" required>
                     <option value="" default>-- Select --</option>
@@ -279,17 +279,17 @@ function load()
                     <option value="other">Other</option>
     		</select>
 
-<div id="newcompany" style="display:none;">
-<input class="form-control" type="text" placeholder="Enter company's name" id="new_company" name="new_company"/>
-(A request will be sent to the Admin for the New company)
-</div>
-<font color='red'> <DIV id="cpr"> </DIV> </font>
-<br>
+            <div id="newcompany" style="display:none;">
+            <input class="form-control" type="text" placeholder="Enter company's name" id="new_company" name="new_company"/>
+            (A request will be sent to the Admin for the New company)
+            </div>
+            <font color='red'> <DIV id="cpr"> </DIV> </font>
+            <br>
 
     </div>
 
 
-    <div class="col-md-3">
+    <div class="col-md-6 col-sm-6 col-xs-12">
         <label for="Type">Type</label>
         <select class="form-control" name="type">
             <!-- <option value="" default>-- Select --</option> -->
@@ -298,7 +298,7 @@ function load()
         </select>
   	</div>
 
-    <div class="col-md-3">
+    <div class="col-md-3 col-sm-3 col-xs-6">
         <label for="profile">Profile</label>
         <select class="form-control" name="profile" id="profile">
 
@@ -311,7 +311,7 @@ function load()
 		<font color='red'> <DIV id="pfr"> </DIV> </font>
     </div>
 
-<div class="col-md-3 ">
+    <div class="col-md-3 col-sm-3 col-xs-6">
         <label for="selected">Status</label>
         <select class="form-control" name="selected" id="selected">
 
@@ -330,13 +330,19 @@ function load()
 
 
 <div class="row">
-	   <div class="col-md-6">
+	   <div class="col-md-4 col-sm-4 col-xs-12">
 
-	<label for="criteria">Enter Job/Intern Criteria if any : &nbsp</label>
-		<input value="{{ edit_exp.criteria }}" class="form-control" type="text" width="80px" name="criteria" id="criteria" size="70" placeholder="The company had a pointer criteria of 7.5 and no current backlogs"/>
-	</div>
+        <label for="criteria">Job/Intern Criteria</label>
+            <input value="{{ edit_exp.criteria }}" class="form-control" type="text" width="80px" name="criteria" id="criteria" size="70" placeholder="Minimum Pointer/current backlogs"/>
+        </div>
 
-    <div class="col-md-3 ">
+    <div class="col-md-4 col-sm-4 col-xs-6" >
+    <label class="mobile-view-margin-topp" for="cgpa">Current CGPA</label>
+    <input type="number" step="0.1" value="{% if edit_exp.cgpa != 0.0 %}{{ edit_exp.cgpa }}{% endif %}" class="form-control" placeholder="Current CGPA" id="cgpa" name="cgpa"/>
+     <font color='red'> <DIV id="cgpar"> </DIV> </font>
+    </div>
+
+    <div class="col-md-4 col-sm-4 col-xs-6">
     <label class="mobile-view-margin-topp" for="On-Off campus">Where?</label>
         <select class="form-control" id="On-Off campus" name="On-Off campus">
         <option value="1" {% if edit_exp.onoffcampus == 1 %} selected='selected' {% endif %}>On Campus</option>
@@ -344,11 +350,7 @@ function load()
         </select>
     </div>
 
-	 <div class="col-md-3 " >
-    <label class="mobile-view-margin-topp" for="cgpa">This will be shown publicly</label>
-    <input type="number" step="0.1" value="{% if edit_exp.cgpa != 0.0 %}{{ edit_exp.cgpa }}{% endif %}" class="form-control" placeholder="Current CGPA" id="cgpa" name="cgpa"/>
-     <font color='red'> <DIV id="cgpar"> </DIV> </font>
-    </div>
+
 
 <br>
 
@@ -370,19 +372,19 @@ function load()
     }
 </script>
 
-    <div class="col-md-4 " >
+    <div class="col-md-4 col-sm-4 col-xs-6" >
 
     <label for=" control-label package">Package/Stipend</label>
 
-<div style="position:absolute;right:10px;" >
-<select onchange="ch();" id='amount' name="amount" class="form-control" >
-        <option value="1000" default>Thousand</option>
-        <option value="100000">Lakhs</option>
-    </select>
-</div>
+        <div style="position:absolute;right:10px;" >
+        <select onchange="ch();" id='amount' name="amount" class="form-control" >
+                <option value="1000" default>Thousand</option>
+                <option value="100000">Lakhs</option>
+            </select>
+        </div>
 
-    <input type="number" value="{% widthratio edit_exp.package 1000 1 %}" onchange="ch();" class="form-control" id="package" name="package" placeholder="Amount">
-</input>
+            <input type="number" value="{% widthratio edit_exp.package 1000 1 %}" onchange="ch();" class="form-control" id="package" name="package" placeholder="Amount">
+        </input>
 
 
 	<font color='red'> <DIV id="pckgr"> </DIV> </font>
@@ -390,14 +392,14 @@ function load()
     </div>
 
 
-    <div class="col-md-3 " style="top:5px;">
+    <div class="col-md-4 col-sm-4 col-xs-6" style="top:5px;">
  <br>
-    <input type="number" value="{% if edit_exp.package != 0.0 %}{{ edit_exp.package }}{% endif %}" readonly class="form-control" id="total-amount" name="total-amount" placeholder="total-amount">
+    <input type="number" value="{% if edit_exp.package != 0.0 %}{{ edit_exp.package }}{% endif %}" readonly class="form-control" id="total-amount" name="total-amount" placeholder="Total">
 </input>
     </div>
 
-<div class="col-md-4">
-<label for="session" class="mobile-view-margin-topp">Session or year</label>
+<div class="col-md-4 col-sm-4 col-xs-12">
+<label for="session" class="mobile-view-margin-topp">Session</label>
  <select class="form-control" id="session" name="session">
 	<option value="2017-18" >2017-18</option>
         <option value="2016-17" >2016-17</option>
@@ -440,9 +442,9 @@ function load()
            <input type="hidden" value=0 id="rounds" name="rounds">
 
        <div class="btn-group btn-group-md"  role="group">
-           <button type="button" class="btn addround1 btn-success btn-lg" style="text-transform: none; border-radius: 50px;" onclick="display()"><span>Add Round</span></button>
+           <button type="button" class="btn btn-lg btn-ex" style="text-transform: none; border-radius: 50px;" onclick="display()"><span>Add Round</span></button>
 
-           <button type="button" class="btn addround2 btn-danger btn-lg" style="text-transform: none; border-radius: 50px;" onclick="remove_round()"> Remove round </button>
+           <button type="button" class="btn btn-lg btn-ex" style="text-transform: none; border-radius: 50px;" onclick="remove_round()"> Remove round </button>
        </div>
     <br>
 
@@ -451,8 +453,8 @@ function load()
 
 {#{% include "advanced.html" %}#}
 
-<button type="submit" value=1 class="btn btn-info btn-md save" id="save" name="save" style="text-transform: none; border-radius: 50px;margin-bottom:20px;">Save changes</button>
-<button type="submit" value=1 class="btn btn-success submit btn-md" id="submit" name="submit" style="text-transform: none; border-radius: 50px; margin-bottom:20px;">Submit experience</button>
+<button type="submit" value=1 class="btn btn-ex btn-md" id="save" name="save" style="text-transform: none; border-radius: 50px;margin-bottom:20px;">Save changes</button>
+<button type="submit" value=1 class="btn btn-ex btn-md" id="submit" name="submit" style="text-transform: none; border-radius: 50px; margin-bottom:20px;">Submit experience</button>
 
 <br>
 
