--- a/portalapp/templates/experienceform.html
+++ b/portalapp/templates/experienceform.html
@@ -401,6 +401,7 @@ function load()
 <div class="col-md-4 col-sm-4 col-xs-12">
 <label for="session" class="mobile-view-margin-topp">Session</label>
  <select class="form-control" id="session" name="session">
+	<option value="2018-19" >2018-19</option>	
 	<option value="2017-18" >2017-18</option>
         <option value="2016-17" >2016-17</option>
         <option value="2015-16">2015-16</option>
