--- a/portalapp/templates/experienceform.html
+++ b/portalapp/templates/experienceform.html
@@ -454,7 +454,7 @@ function load()
 
 {#{% include "advanced.html" %}#}
 
-<button type="submit" value=1 class="btn btn-ex btn-md" id="save" name="save" style="text-transform: none; border-radius: 50px;margin-bottom:20px;">Save changes</button>
+<!--button type="submit" value=1 class="btn btn-ex btn-md" id="save" name="save" style="text-transform: none; border-radius: 50px;margin-bottom:20px;">Save changes</button-->
 <button type="submit" value=1 class="btn btn-ex btn-md" id="submit" name="submit" style="text-transform: none; border-radius: 50px; margin-bottom:20px;">Submit experience</button>
 
 <br>
