--- a/portalapp/templates/company_placement.html
+++ b/portalapp/templates/company_placement.html
@@ -26,7 +26,7 @@
         <div class="col-md-8">
          <ul class="nav nav-tabs">
                  {% for i in dept_list %}
-                        <li ><a data-toggle="tab" href="#{{ i.id }}">{{ i.display_name }}<sup>{{ jobs | length }}</sup></a></li>
+                        <li ><a data-toggle="tab" href="#{{ i.id }}">{{ i.display_name }}<sup>{{ jobs_dept | length }}</sup></a></li>
                 {% endfor %}
           </ul>
 <br>
