Accept Company Page - Process all request once a matching request is accepted

--- a/portalapp/templates/admin_request.html
+++ b/portalapp/templates/admin_request.html
@@ -80,7 +80,7 @@
                 <div class="row">
                 <div class="col-md-12">
               {% if request_obj.intern_exp_id  %}
-                <strong>Internship </strong>  <span class="glyphicon glyphicon-ok"></span>
+                <strong>Internship </strong>  <span class="glyphicon glyphicon-ok" style="color:green"></span>
               {% else %}
                 <strong>Job </strong> <span class="glyphicon glyphicon-ok" style="color:green"></span>
               {% endif %}
