--- a/portalapp/templates/headercontent.html
+++ b/portalapp/templates/headercontent.html
@@ -246,11 +246,16 @@ cannot_contribute="{{cannot_contribute}}"
 		$("#cannot_contribute_modal").modal('show');
 	}
 
+
 forgotpass_emailsent="{{forgotpass_emailsent}}"
 
 	if(forgotpass_emailsent==1)
 	{
 		$("#forgotpass_emailsent_modal").modal('show');
+	}
+	if(forgotpass_emailsent==2)
+	{
+		$("#forgotpass_emailsent_modal_not").modal('show');
 	}
 
 experience_saved="{{experience_saved}}"
