--- a/portalapp/templates/success_dialogue.html
+++ b/portalapp/templates/success_dialogue.html
@@ -2,11 +2,11 @@
     <div class="modal-dialog">
         <div class="modal-content success_popup">
             <div class="modal-header">
-                <button type="button" class="close" data-dismiss="modal"><span aria-hidden="true">&times;</span><span class="sr-only">Close</span></button>
+                <button type="button" class="close" data-dismiss="modal"><i class="material-icons">clear</i></button>
                 <h3 class="modal-title" id="myModalLabel">Registeration Successful!!</h3>
             </div>
             <div class="modal-body">
-                <p class="description">Welcome, you can contribute now by logging in.</p></span>
+                <p class="description">You can contribute by logging in.</p></span>
             </div>
             <div class="modal-footer">
                 <button type="button" class="btn btn-default" data-dismiss="modal">OK</button>
@@ -21,11 +21,11 @@
     <div class="modal-dialog">
         <div class="modal-content success_popup"  id="popup_contribute">
             <div class="modal-header">
-                <button type="button" class="close" data-dismiss="modal"><span aria-hidden="true">&times;</span><span class="sr-only">Close</span></button>
+                <button type="button" class="close" data-dismiss="modal"><i class="material-icons">clear</i></button>
                 <h3 class="modal-title" id="myModalLabel">Experience submitted Successfully!!</h3>
             </div>
             <div class="modal-body">
-                <p class="description" >You will be notified by an email when your experience is accepted.<p></span>
+                <p class="description" >You will be notified by an email when your experience is accepted.</p></span>
             </div>
             <div class="modal-footer">
                 <button type="button" class="btn btn-default" data-dismiss="modal">OK</button>
@@ -40,11 +40,11 @@
     <div class="modal-dialog">
         <div class="modal-content success_popup"  id="popup_contribute">
             <div class="modal-header">
-                <button type="button" class="close" data-dismiss="modal"><span aria-hidden="true">&times;</span><span class="sr-only">Close</span></button>
+                <button type="button" class="close" data-dismiss="modal"><i class="material-icons">clear</i></button>
                 <h3 class="modal-title" id="myModalLabel">Kindly Login !!</h3>
             </div>
             <div class="modal-body">
-                <p class="description" >Kindly Login to contribute your experience <p></span>
+                <p class="description" >Kindly Login first to contribute your experience </p></span>
             </div>
             <div class="modal-footer">
                 <button type="button" class="btn btn-default" data-dismiss="modal">OK</button>
@@ -59,7 +59,7 @@
     <div class="modal-dialog">
         <div class="modal-content success_popup"  id="popup_contribute">
             <div class="modal-header">
-                <button type="button" class="close" data-dismiss="modal"><span aria-hidden="true">&times;</span><span class="sr-only">Close</span></button>
+                <button type="button" class="close" data-dismiss="modal"><i class="material-icons">clear</i></button>
                 <h3 class="modal-title" id="myModalLabel">Link Sent to email</h3>
             </div>
             <div class="modal-body">
@@ -73,11 +73,30 @@
     </div>
 </div>
 
+<div class="modal fade" id="forgotpass_emailsent_modal_not" tabindex="-1" role="dialog" aria-labelledby="myModalLabel" aria-hidden="true">
+    <div class="modal-dialog">
+        <div class="modal-content success_popup"  id="popup_contribute">
+            <div class="modal-header">
+                <button type="button" class="close" data-dismiss="modal"><i class="material-icons" style="color:#fff;">clear</i></button>
+                <h3 class="modal-title" id="myModalLabel">Unable to send email</h3>
+            </div>
+            <div class="modal-body">
+                <p class="description">We are facing problem in sending reset link. Please try again after some time.<br>
+                Or contact us on <b>studentportal@students.vnit.ac.in</b></p></span>
+            </div>
+            <div class="modal-footer">
+                <button type="button" class="btn btn-default" data-dismiss="modal">OK</button>
+
+            </div>
+        </div>
+    </div>
+</div>
+
 <div class="modal fade" id="experience_saved" tabindex="-1" role="dialog" aria-labelledby="myModalLabel" aria-hidden="true">
    <div class="modal-dialog">
        <div class="modal-content success_popup"  id="popup_contribute">
            <div class="modal-header">
-               <button type="button" class="close" data-dismiss="modal"><span aria-hidden="true">&times;</span><span class="sr-only">Close</span></button>
+               <button type="button" class="close" data-dismiss="modal"><i class="material-icons">clear</i></button>
                <h3 class="modal-title" id="myModalLabel">Experience Saved</h3>
            </div>
            <div class="modal-body">
