--- a/portalapp/static/CSS/homepage.css
+++ b/portalapp/static/CSS/homepage.css
@@ -511,9 +511,9 @@ background-color: rgb(24, 31, 69);
 
 .modal-header, h4{
       background-color: #181f45 !important;
-      color:#909090  !important;
+      color:#fff  !important;
       text-align: center;
-      font-size: 30px;
+      font-size: 25px;
   }
   .modal-footer {
       background-color: #181f45;
@@ -529,35 +529,47 @@ background-color: rgb(24, 31, 69);
 }
  
 .modal-dialog .btn{
-	margin:0 auto;
-color:#213a73; 
-	opacity:0.5;
-        background-color:#8ec3d8; 
-        }
+    margin: 0 auto;
+    color: #ffffff;
+    text-shadow: 0 0px 0 #fff !important;
+    /* opacity: 0.5; */
+    border: 2px #fff solid;
+    border-radius: 25px;
+    background: #171f45 !important;
+}
   
-        
+.modal-title{
+    color : #fff !important;
+    text-align: center;
+}
 .modal-body {
 	background-color:#ffffff ;
 	padding:20px 20px !important;
+    text-align: center;
 }
 .close{
     background-color: black;
-    font-size: 100px;
+    font-size: 20px !important;
+    color:#fff;
 }
 
 #login_content{
-	margin-left: 20%;
-	width: 300px;
+    margin-left: calc(50% - 200px);
+    width: 350px;
 }
 #register_content{
 width: 80%;
 margin-left: 10%;
 }
 #forgotpass_content{
-	margin-left: 20%;
-	width: 300px;
+	margin-left: calc(50% - 200px);
+    width: 350px;
 }
 
+/* LOgin button css*/
+.btn-login{
+    width:120px !important;
+}
 
 .dropdown_here {
     position: absolute;
@@ -1139,3 +1151,5 @@ select:focus,textarea:focus,button:focus{
     display:flex;
     justify-content: center;
 }
+
+
