--- a/portalapp/templates/experienceform.html
+++ b/portalapp/templates/experienceform.html
@@ -454,9 +454,12 @@ function load()
 
 {#{% include "advanced.html" %}#}
 
-<button type="submit" value=1 class="btn btn-ex btn-md" id="save" name="save" style="text-transform: none; border-radius: 50px;margin-bottom:20px;">Save changes</button>
+<div class="btn-group btn-group-md"  role="group">
+    <button type="submit" value=1 class="btn btn-ex btn-md" id="save" name="save" style="text-transform: none; border-radius: 50px;margin-bottom:20px;">Save changes</button>
 
-<button type="submit" value=1 class="btn btn-ex btn-md" id="submit" name="submit" style="text-transform: none; border-radius: 50px; margin-bottom:20px;">Submit experience</button>
+    <button type="submit" value=1 class="btn btn-ex btn-md" id="submit" name="submit" style="text-transform: none; border-radius: 50px; margin-bottom:20px;">Submit experience</button>
+
+</div>
 
 <br>
 
