--- a/portalapp/templates/loginmodal.html
+++ b/portalapp/templates/loginmodal.html
@@ -8,31 +8,31 @@
        
         <!-- Modal Header -->
          <div class="modal-header" style="padding:35px 50px;">
-          <button type="button" class="close" data-dismiss="modal">&times;</button>
-          <h3 ><span class="glyphicon glyphicon-lock"></span> Login</h3>
+          <button type="button" class="close" data-dismiss="modal"><i class="material-icons">clear</i></button>
+          <h3 style="color:#fff;">Log In</h3>
         </div>
         <!-- Modal header finished -->
 
-<!-- Error msgs from backend/authentication error -->
-<div name="error_block">
-	<ul>
-	{% if err_msg_log %}
-		{% for i in err_msg_log %}
-		{% if i != "" %}
-		<li style="color:red;">{{ i }}</li>
-		{% endif %}
-		{% endfor %}
-	{% endif %}
-	</ul>
-	</div>
+        <!-- Error msgs from backend/authentication error -->
+        <div name="error_block">
+            <ul>
+            {% if err_msg_log %}
+                {% for i in err_msg_log %}
+                {% if i != "" %}
+                <li style="color:red;">{{ i }}</li>
+                {% endif %}
+                {% endfor %}
+            {% endif %}
+            </ul>
+        </div>
 
 
 	
         <!-- Modal Body -->
         <div class="modal-body" style="padding:40px 50px;">
-{% csrf_token %}
+        {% csrf_token %}
           <form role="form" name="login_form" method="POST" action="/login/" onsubmit="return validate_login()">
-{% csrf_token %}
+            {% csrf_token %}
 
         <!--   <div hidden="true" class="form-group">
             <label  for="loginas"><span class="glyphicon"></span>Log in as</label>
@@ -66,7 +66,7 @@
               <label><input type="checkbox" value="" checked >Remember me</label>
             </div>
 
-              <button type="submit" class="btn btn-block"><span style="color:#213a73;" class="glyphicon glyphicon-off"></span> Login</button>
+              <button type="submit" class="btn btn-block btn-login">Login</button>
   
 <!--        
 <input type="button" class="btn btn-success btn-block" onclick="document.designMode = 'on';" value="Edit Page"/>
@@ -79,9 +79,9 @@
         
         <!-- Modal footer -->
         <div class="modal-footer">
-<p data-dismiss="modal"><a href="#" data-toggle="modal" data-target="#myforgotModal">Forgot Password?</a></p>
+            <p data-dismiss="modal"><a href="#" style="color:#fff;" data-toggle="modal" data-target="#myforgotModal">Forgot Password?</a></p>
 
-</div>
+        </div>
         <!-- Modal footer finished -->
 
       </div>
@@ -101,23 +101,23 @@
        
         <!-- Modal Header -->
          <div class="modal-header" style="padding:35px 50px;">
-          <button type="button" class="close" data-dismiss="modal">&times;</button>
-          <h4><span class="glyphicon glyphicon-lock"></span> Forgot Password</h4>
+          <button type="button" class="close" data-dismiss="modal"><i class="material-icons">clear</i></button>
+          <h3 style="color:#fff !important;">Forgot Password</h3>
         </div>
         <!-- Modal header finished -->
 
-<!-- Error msgs from backend/authentication error -->
-<div name="error_block" id="err_block">
-	<ul>
-	{% if err_msg_fp %}
-		{% for i in err_msg_fp %}
-		{% if i != "" %}
-		<li style="color:red;">{{ i }}</li>
-		{% endif %}
-		{% endfor %}
-	{% endif %}
-	</ul>
-	</div>
+        <!-- Error msgs from backend/authentication error -->
+        <div name="error_block" id="err_block">
+            <ul>
+            {% if err_msg_fp %}
+                {% for i in err_msg_fp %}
+                {% if i != "" %}
+                <li style="color:red;">{{ i }}</li>
+                {% endif %}
+                {% endfor %}
+            {% endif %}
+            </ul>
+        </div>
 
 	
         <!-- Modal Body -->
@@ -131,22 +131,21 @@
     
             <div class="form-group">
             
-                          <div class="inner-addon left-addon">
-                            <span class="fa fa-user"></span>
-                            <input name="email" type="text"  class="form-control" id="email" required placeholder="Enter email id" />
+              <div class="inner-addon left-addon">
+                <input name="email" type="text"  class="form-control" id="email" required placeholder="Email ID" />
 			  <font color='red'> <DIV id="emr"> </DIV> </font>
-                          </div>
+              </div>
             </div>
      
             <div class="form-group">
                   
-                  <input name="clg_id" type="text" class="form-control" id="clg_id" required placeholder="Enter College ID (15616)"/>
+                  <input name="clg_id" type="text" class="form-control" id="clg_id" required placeholder="College ID (15616)"/>
 		  <font color='red'> <DIV id="cidr1"> </DIV> </font>
             </div>
     
-                 <button type="submit" class="btn btn-block"><span class="glyphicon glyphicon-off"></span>&nbsp Send Email</button>
+                 <button type="submit" class="btn btn-block btn-login">Send Email</button>
     
-    </div>
+            </div>
 		
 </form> 
 
