--- a/portalapp/templates/experienceofintern.html
+++ b/portalapp/templates/experienceofintern.html
@@ -15,12 +15,12 @@
         <br>
         <div class="row">
             
-  <div class="col-md-3 col-sm-8">
+  <div class="col-md-3 col-sm-12">
 
 
-                <div class="panel panel-info" style="margin:3%;margin-top:8%;">
+                <div class="panel panel-info">
    
-                    <div class="panel-heading"><b style="font-size:120%"><span class="glyphicon glyphicon-tags" style="color: black !important;"></span>&nbsp;&nbsp;&nbsp;{{ experience.userid.firstname }} {{ experience.userid.lastname }}</b></div>
+                    <div class="panel-heading"><i class="material-icons" style="color: #000 !important;position: absolute;">account_circle</i><b style="font-size:120%;padding-left: 30px">{{ experience.userid.firstname }} {{ experience.userid.lastname }}</b></div>
                   <div class="panel-body">
                         <p><b>Department :</b>&nbsp;{{ experience.cdr_id.deptid.short_name }}</p>
 {#                      <div class="row basic_details">#}
@@ -34,7 +34,7 @@
 
             </div>
 
-            <div class="col-md-8 mid-content" style="margin-left: 3%;margin-right: 3%;">
+            <div class="col-md-8 col-sm-12 mid-content" style="margin-left: 3%;margin-right: 3%;">
                 <div class="basic_interviewinfo">
 	   	            <div class="row">
 				        <div class="col-xs-5 col-md-3 section--left">Profile</div>
