--- a/portalapp/templates/headercontent.html
+++ b/portalapp/templates/headercontent.html
@@ -144,11 +144,12 @@ $(document).ready(function() {
   <div class="container-fluid">
     <!-- Brand and toggle get grouped for better mobile display -->
     <div class="navbar-header">
-      <button type="button" class="navbar-toggle collapsed" data-toggle="collapse" data-target="#bs-example-navbar-collapse-1" aria-expanded="false">
-        <span class="sr-only">Toggle navigation</span>
-        <span class="icon-bar"></span>
-        <span class="icon-bar"></span>
-        <span class="icon-bar"></span>
+      <button type="button" class="navbar-toggle collapsed" style="padding: 5px 10px !important;" data-toggle="collapse" data-target="#bs-example-navbar-collapse-1" aria-expanded="false">
+{#        <span class="sr-only">Toggle navigation</span>#}
+{#        <span class="icon-bar"></span>#}
+{#        <span class="icon-bar"></span>#}
+{#        <span class="icon-bar"></span>#}
+          <i class="material-icons" style="font-size: 30px">menu</i>
       </button>
 {#      <a class="navbar-brand" href="#">Brand</a>#}
     </div>
