--- a/portalapp/templates/loginmodal.html
+++ b/portalapp/templates/loginmodal.html
@@ -8,7 +8,7 @@
        
         <!-- Modal Header -->
          <div class="modal-header" style="padding:35px 50px;">
-          <button type="button" class="close" data-dismiss="modal"><i class="material-icons">clear</i></button>
+          <button type="button" class="close" data-dismiss="modal"><i class="material-icons" style="color:#fff !important;">clear</i></button>
           <h3 style="color:#fff;">Log In</h3>
         </div>
         <!-- Modal header finished -->
@@ -101,7 +101,7 @@
        
         <!-- Modal Header -->
          <div class="modal-header" style="padding:35px 50px;">
-          <button type="button" class="close" data-dismiss="modal"><i class="material-icons">clear</i></button>
+          <button type="button" class="close" data-dismiss="modal"><i class="material-icons" style="color:#fff !important;">clear</i></button>
           <h3 style="color:#fff !important;">Forgot Password</h3>
         </div>
         <!-- Modal header finished -->
