--- a/portalapp/templates/success_dialogue.html
+++ b/portalapp/templates/success_dialogue.html
@@ -2,7 +2,7 @@
     <div class="modal-dialog">
         <div class="modal-content success_popup">
             <div class="modal-header">
-                <button type="button" class="close" data-dismiss="modal"><i class="material-icons">clear</i></button>
+                <button type="button" class="close" data-dismiss="modal"><i class="material-icons" style="color:#fff !important;">clear</i></button>
                 <h3 class="modal-title" id="myModalLabel">Registeration Successful!!</h3>
             </div>
             <div class="modal-body">
@@ -21,7 +21,7 @@
     <div class="modal-dialog">
         <div class="modal-content success_popup"  id="popup_contribute">
             <div class="modal-header">
-                <button type="button" class="close" data-dismiss="modal"><i class="material-icons">clear</i></button>
+                <button type="button" class="close" data-dismiss="modal"><i class="material-icons" style="color:#fff !important;">clear</i></button>
                 <h3 class="modal-title" id="myModalLabel">Experience submitted Successfully!!</h3>
             </div>
             <div class="modal-body">
@@ -40,7 +40,7 @@
     <div class="modal-dialog">
         <div class="modal-content success_popup"  id="popup_contribute">
             <div class="modal-header">
-                <button type="button" class="close" data-dismiss="modal"><i class="material-icons">clear</i></button>
+                <button type="button" class="close" data-dismiss="modal"><i class="material-icons" style="color:#fff !important;">clear</i></button>
                 <h3 class="modal-title" id="myModalLabel">Kindly Login !!</h3>
             </div>
             <div class="modal-body">
@@ -59,7 +59,7 @@
     <div class="modal-dialog">
         <div class="modal-content success_popup"  id="popup_contribute">
             <div class="modal-header">
-                <button type="button" class="close" data-dismiss="modal"><i class="material-icons">clear</i></button>
+                <button type="button" class="close" data-dismiss="modal"><i class="material-icons" style="color:#fff !important;">clear</i></button>
                 <h3 class="modal-title" id="myModalLabel">Link Sent to email</h3>
             </div>
             <div class="modal-body">
@@ -77,7 +77,7 @@
     <div class="modal-dialog">
         <div class="modal-content success_popup"  id="popup_contribute">
             <div class="modal-header">
-                <button type="button" class="close" data-dismiss="modal"><i class="material-icons" style="color:#fff;">clear</i></button>
+                <button type="button" class="close" data-dismiss="modal"><i class="material-icons" style="color:#fff !important;">clear</i></button>
                 <h3 class="modal-title" id="myModalLabel">Unable to send email</h3>
             </div>
             <div class="modal-body">
@@ -96,7 +96,7 @@
    <div class="modal-dialog">
        <div class="modal-content success_popup"  id="popup_contribute">
            <div class="modal-header">
-               <button type="button" class="close" data-dismiss="modal"><i class="material-icons">clear</i></button>
+               <button type="button" class="close" data-dismiss="modal"><i class="material-icons" style="color:#fff !important;">clear</i></button>
                <h3 class="modal-title" id="myModalLabel">Experience Saved</h3>
            </div>
            <div class="modal-body">
