Navbar modification/ added footer

--- a/clubsapp/templates/clubHome.html
+++ b/clubsapp/templates/clubHome.html
@@ -181,9 +181,12 @@
                         </div>
                       </div>
                     </section>
-                    <div class="pricing">
-                      <p>Stay tuned for more updates</p>
+                    <div class="pricing" style="height: 40px !important;padding-top: 20px;">
+                      <div class="container-fluid"style="background:#192044;padding:25px;">
+                          © 2018 Copyright: <a href="http://vnit.ac.in" style="color:#f0ad4e;"> VNIT, Nagpur </a>
+                      </div>
                     </div>
+
 
 
 
