--- a/portalapp/static/CSS/homepage.css
+++ b/portalapp/static/CSS/homepage.css
@@ -592,10 +592,10 @@ background-color: rgb(24, 31, 69);
         margin: 0 !important;
         height: 100%;
         border: 0px;
+
     }
     .modal-body{
         height: 70% !important;
-        vertical-align: center;
     }
     .modal-header{
         height: 15% !important;
@@ -603,11 +603,12 @@ background-color: rgb(24, 31, 69);
     }
     .modal-footer{
         height: 15% !important;
-        vertical-align: center;
+
     }
     .modal-dialog{
         margin: 0 !important;
         height: 100% !important;
+        min-height: 600px !important;
     }
     .modal-body form{
         padding: 50px 40px;
