--- a/portalapp/templates/aboutus.html
+++ b/portalapp/templates/aboutus.html
@@ -253,10 +253,7 @@ and the community where we spent our most of the time which is "A Club".</p>
 </div></div>
 <br>
 <br>
-<footer>
-<div class="footer-main-wrap"  style="overflow-x: hidden;">
-</div>
-</footer>
+{% include "footer.html" %}
     </div>
     </body>
 
