--- a/portalapp/templates/accept_company_modal.html
+++ b/portalapp/templates/accept_company_modal.html
@@ -80,9 +80,7 @@
               <button type="submit" name="button" onclick="validate_accept_company_modal({{ request_obj.id }});" value="Accept|{{request_obj.id}}" class="btn btn-success btn-block "><span class="glyphicon glyphicon-off"></span> Add Company </button>
           </form>
         </div>
-        <div class="modal-footer">
-        
-        </div>
+        {% include "footer.html" %}
       </div>
 
 </div>
