--- a/portalapp/templates/dept_home.html
+++ b/portalapp/templates/dept_home.html
@@ -345,11 +345,7 @@
 
     </div>
 </div>
-
-<footer>
-<div class="footer-main-wrap">
-</div>
-</footer>
+{% include "footer.html" %}
 
 </body>
 </html>
