--- a/clubsapp/templates/VnitClubsHome.html
+++ b/clubsapp/templates/VnitClubsHome.html
@@ -39,80 +39,84 @@
       <section class="animsition">
 
         <div id="Sides">
-          <div id="leftSide">
+            <div id="leftSide">
 
-          <div id="home" class="gradient">
-            <div id="myCarousel" class="carousel slide" data-ride="carousel">
-              <!-- Indicators -->
-              <!--<ol class="carousel-indicators">
-                <li data-target="#myCarousel" data-slide-to="0" class="active"></li>
-                <li data-target="#myCarousel" data-slide-to="1"></li>
-                <li data-target="#myCarousel" data-slide-to="2"></li>
-		<li data-target="#myCarousel" data-slide-to="4"></li>
-              </ol>-->
+              <div id="home" class="gradient">
+                <div id="myCarousel" class="carousel slide" data-ride="carousel">
+                  <!-- Indicators -->
+                  <!--<ol class="carousel-indicators">
+                    <li data-target="#myCarousel" data-slide-to="0" class="active"></li>
+                    <li data-target="#myCarousel" data-slide-to="1"></li>
+                    <li data-target="#myCarousel" data-slide-to="2"></li>
+            <li data-target="#myCarousel" data-slide-to="4"></li>
+                  </ol>-->
+                  <!-- Wrapper for slides -->
+                  <div class="carousel-inner">
 
-              <!-- Wrapper for slides -->
-              <div class="carousel-inner">
+                    <div class="item active">
+                      <img src="{% static 'IMG/car0.jpg'  %}" alt="0">
+                    </div>
 
-                <div class="item active">
-                  <img src="{% static 'IMG/car0.jpg'  %}" alt="0">
+                    <div class="item">
+                      <img src="{% static 'IMG/car1.jpg' %}" alt="1">
+                    </div>
+
+                    <div class="item">
+                      <img src="{% static 'IMG/car2.jpg' %}" alt="3">
+                    </div>
+                    <div class="item">
+                    <img src="{% static 'IMG/car3.jpg' %}" alt="4">
+                    </div>
+
+                  </div>
+                  <div class="h-content" id="head">
+                      <h1>STUDENT CLUBS</h1>
+                      <p id="intro">Welcome to the first ever Website for clubs of VNIT. Here you can browse through all the clubs, the latest ongoing events and many more . . .</p>
+                        <div class="drag"><i class="glyphicon glyphicon-arrow-right" id="scrollbutton"></i></div><br><br>
+                  </div>
+
                 </div>
-
-                <div class="item">
-                  <img src="{% static 'IMG/car1.jpg' %}" alt="1">
-                </div>
-
-                <div class="item">
-                  <img src="{% static 'IMG/car2.jpg' %}" alt="3">
-                </div>
-		<div class="item">
-		<img src="{% static 'IMG/car3.jpg' %}" alt="4">
-		</div>
 
               </div>
-              <div class="h-content" id="head">
-              <h1>STUDENT CLUBS</h1>
-              <p id="intro">Welcome to the first ever Website for clubs of VNIT. Here you can browse through all the clubs, the latest ongoing events and many more . . .</p>
-                <div class="drag"><i class="glyphicon glyphicon-arrow-right" id="scrollbutton"></i></div><br><br>
             </div>
 
+            <div id="rightSide">
+
+              <section class="cover-image js-menu-shift" id="subhead">
+                  <div class="layer"><h1 class="h1"> Clubs of VNIT  </h1><div class="drag"><i class="glyphicon glyphicon-arrow-left" id="scrollbutton2"></i></div></div>
+              </section>
+              <div class="project">
+                <ul class="gallery project_navigation">
+                  {% for club in clubs%}
+                    <li class="item col-lg-4 col-sm-6 col-md-4 col-xs-12">
+                        <figure>
+                          <!-- Your picture -->
+                          <img src="../static/IMG/thumb_{{club.shortName}}.jpg"  class="img-responsive" />
+                          <!-- Picture's description below this one -->
+                          <figcaption class="caption">
+                            <div class="photo-details">
+                              <div id="photo-heading">{{club}}</div>
+                              <p>{{club.aboutUs}}</p>
+                              <a href="/clubs/{{club.id}}" class="highlight" id="golden">VIEW MORE</a>
+                            </div>
+
+                          </figcaption>
+                        </figure>
+                    </li>
+                   {% endfor %}
+
+
+                </ul>
+              </div>
+
+              <div class="pricing" style="height: 30px;">
+                <p>Stay tuned for more updates..</p>
+              </div>
+
             </div>
 
-          </div>
         </div>
 
-        <div id="rightSide">
-
-          <section class="cover-image js-menu-shift" id="subhead"><div class="layer"><h1 class="h1"> Clubs of VNIT  </h1><div class="drag"><i class="	glyphicon glyphicon-arrow-left" id="scrollbutton2"></i></div></div></section>
-          <div class="project">
-            <ul class="gallery project_navigation">
-              {% for club in clubs%}
-                <li class="item col-lg-4 col-sm-6 col-md-4 col-xs-12">
-                    <figure>
-                      <!-- Your picture -->
-                      <img src="../static/IMG/thumb_{{club.shortName}}.jpg"  class="img-responsive" />
-                      <!-- Picture's description below this one -->
-                      <figcaption class="caption">
-                        <div class="photo-details">
-                          <div id="photo-heading">{{club}}</div>
-                          <p>{{club.aboutUs}}</p>
-                          <a href="/clubs/{{club.id}}" class="highlight" id="golden">VIEW MORE</a>
-                        </div>
-
-                      </figcaption>
-                    </figure>
-                </li>
-               {% endfor %}
-
-
-            </ul>
-          </div>
-
-          <div class="pricing">
-            <p>Stay tuned for more updates..</p>
-          </div>
-        </div>
-        </div>
       </section>
 
       <script src="{% static 'JS/jquery-1.11.3.min.js' %}"></script>
