--- a/portalapp/templates/headercontent.html
+++ b/portalapp/templates/headercontent.html
@@ -188,11 +188,11 @@ $(document).ready(function() {
 	<li><a href="/clubs/">Clubs</a></li>
       </ul>
 {% load app_filters %}
-      <ul class="nav navbar-nav navbar-right">
-        <li id="nav1" ><a  href="/home/contribute" style="margin:8px;padding:10px;" class="highlight" onfocus=" "><span style="color: #FFC107;">Contribute</span>	 </a></li>
+      <ul class="nav navbar-nav navbar-right" style="margin-right: 0px !important;">
+        <li id="nav1" ><a  href="/home/contribute" style="margin:8px;padding:6px;" class="highlight" onfocus=" "><span style="color: #FFC107;">Contribute</span>	 </a></li>
 
           {% if fname == "" %}
-            <li><button id="myBtn">Login</button></li>
+            <li><button id="myBtn" style="padding-top: 14px;">Login</button></li>
           {% else %}
         <li class="dropdown">
             <a href="" class="dropdown-toggle" data-toggle="dropdown" role="button" aria-haspopup="true" style="background: #181F45 !important;" aria-expanded="false">Hi! {{ fname }}  <span class="caret"></span></a>
