Extended list/ Fix excell csv error

--- a/static/CSS/homepage.css
+++ b/static/CSS/homepage.css
@@ -75,19 +75,27 @@ color: black;
 margin:2%;
 }
 
+/* Panel of user*/
+.panel{
+    margin-top: 8%;
+    border:0;
+    border-radius: 0 !important;
+}
+.panel-heading{
+    /*background: #fff !important;*/
+    border: 0;
+    color: #000 !important;
+    border-radius: 0 !important;
+}
 
 .experience-content .mid-content{
 	padding: 2%;
-	padding-left: 20px;
-	/*padding-right: 30px;*/
-	margin: 4%;
 	margin-top: 2%;
-	/*margin-left: 15px;*/
+    margin-bottom: 4%;
 	background-color: white;
 	height: auto;
 	min-height: 200px;
-	/*width: 900px;*/
-	box-shadow: 0 3px 5px rgba(0,0,0,0.16),0 3px 5px rgba(0,0,0,0.23)
+	box-shadow: 0 3px 5px rgba(0,0,0,0.16);
 }
 .experience-content .mid-content .section--left {
     font-size: 1.8rem;
@@ -253,6 +261,10 @@ position:inherit;
 }
 
 @media (min-width: 600px) {
+.post-date
+{
+	font-size: 14px;
+}
     .editprofile{
     width: 80%!important;
 }
@@ -353,18 +365,29 @@ input.search-company::-webkit-input-placeholder {
     width: 600px;
 }
 
+.navbar-default{
+    background: #171f45  !important;
+}
+.navbar-default .navbar-toggle:focus, .navbar-default .navbar-toggle:hover{
+    background-color: rbga(255,255,255,0.5) !important;
+    padding: 0px !important;
+}
 
+.navbar-toggle:hover, .navbar-toggle:focus i{
+    color: #171f45 !important;
+}
 .dropbtn,button	{
     text-transform: uppercase;
     font-family: 'Source Sans Pro', sans-serif;
     color: white;
-    margin: 0 0.8rem;
-    font-size: 1.4rem !important;
+    /*margin: 0px;*/
+    font-size: 1.6rem !important;
     padding: 0;
     letter-spacing: 1px;
     vertical-align: middle;
     display: inline-block;
-    /*line-height: 2.5rem;*/
+    border : 0px !important;
+    /*padding: 5px 10px !important;*/
 }
 
 .main-menu .left-section {
@@ -473,6 +496,12 @@ background-color: rgb(24, 31, 69);
     vertical-align: middle;
     font-weight: normal;
 }
+@media(max-width:768px){
+.cover-image .h1 {
+    font-size: 2.1rem;
+}
+
+}
 
 .cover-image .layer {
     color: #fff;
@@ -507,9 +536,9 @@ background-color: rgb(24, 31, 69);
 
 .modal-header, h4{
       background-color: #181f45 !important;
-      color:#909090  !important;
+      color:#fff  !important;
       text-align: center;
-      font-size: 30px;
+      font-size: 25px;
   }
   .modal-footer {
       background-color: #181f45;
@@ -525,35 +554,80 @@ background-color: rgb(24, 31, 69);
 }
  
 .modal-dialog .btn{
-	margin:0 auto;
-color:#213a73; 
-	opacity:0.5;
-        background-color:#8ec3d8; 
-        }
+    margin: 0 auto;
+    color: #ffffff;
+    text-shadow: 0 0px 0 #fff !important;
+    /* opacity: 0.5; */
+    border: 2px #fff solid;
+    border-radius: 25px;
+    background: #171f45 !important;
+}
   
-        
+.modal-title{
+    color : #fff !important;
+    text-align: center;
+}
 .modal-body {
 	background-color:#ffffff ;
 	padding:20px 20px !important;
+    text-align: center;
 }
 .close{
-    background-color: black;
-    font-size: 100px;
+    font-size: 20px !important;
+    text-shadow: 0 0px 0 #fff !important;
+    color:#fff !important;
+    opacity: 1 !important;
 }
 
 #login_content{
-	margin-left: 20%;
-	width: 300px;
+    margin-left: calc(50% - 200px);
+    width: 350px;
 }
+
+@media(max-width: 420px){
+
+    #login_content{
+        margin-left: calc(50% - 200px);
+        width: 100% !important;
+        margin: 0 !important;
+        height: 100%;
+        border: 0px;
+
+    }
+    .modal-body{
+        height: 70% !important;
+    }
+    .modal-header{
+        height: 15% !important;
+        padding-top: 20px;
+    }
+    .modal-footer{
+        height: 15% !important;
+
+    }
+    .modal-dialog{
+        margin: 0 !important;
+        height: 100% !important;
+        min-height: 600px !important;
+    }
+    .modal-body form{
+        padding: 50px 40px;
+    }
+}
+
 #register_content{
 width: 80%;
 margin-left: 10%;
 }
 #forgotpass_content{
-	margin-left: 20%;
-	width: 300px;
+	margin-left: calc(50% - 200px);
+    width: 350px;
 }
 
+/* LOgin button css*/
+.btn-login{
+    width:120px !important;
+}
 
 .dropdown_here {
     position: absolute;
@@ -809,14 +883,21 @@ padding-top : 15px;
 }
 
 
-
-
 .post-date
 {
-	color: #aaa;
+	color: #8e8686;
 	font-size: 19px;
 	float:right;
 	margin-right:10px;
+}
+
+
+@media(min-width:800px){
+.post-date
+{
+	color: #8e8686;
+	font-size: 19px;
+}
 }
 
 .entry-summary
@@ -1041,12 +1122,17 @@ color:#213a73;
     font-family: 'Source Sans Pro', sans-serif;
 
 }
-@media screen and (max-width: 732px){
+@media screen and (max-width: 732px)
+{
     #login_content{
         margin-left: 10%;
     }
-#footer_links{
-display: none;}
+	#footer_links{
+	display: none;}
+
+.entry-header .entry-title {
+}
+    font-size: 20px;
 }
 
 
@@ -1123,3 +1209,5 @@ select:focus,textarea:focus,button:focus{
     display:flex;
     justify-content: center;
 }
+
+
